[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "cmake>=3.13",
    "ninja; sys_platform != 'win32' and platform_machine != 'arm64'",
    # Documentation requirements (see docs/requirements.txt for details)
    "urllib3<2",
    "docutils>=0.18.1",
    "sphinx<=7.1.2",
    "six",
    "testresources",
    "recommonmark",
    "sphinx-press-theme",
    "sphinx-tabs",
    "breathe"
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build-verbosity = "1"

test-requires = ["numpy"]
test-command = [
    "python {project}/tests/python/OpenColorIOTestSuite.py",
    "ociocheck"
]

[tool.cibuildwheel.linux]
before-build = "share/ci/scripts/linux/yum/install_docs_env.sh"

[tool.cibuildwheel.macos]
before-build = "share/ci/scripts/macos/install_docs_env.sh"

[tool.cibuildwheel.windows]
environment = { PATH="$GITHUB_WORKSPACE/doxygen;$PATH" }
before-build = 'bash -c "share/ci/scripts/windows/install_docs_env.sh $GITHUB_WORKSPACE/doxygen"'
