[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "cmake>=3.14",
    "ninja; sys_platform != 'win32' and platform_machine != 'arm64'",
    # Documentation requirements (see docs/requirements.txt for details)
    "urllib3<2",
    "docutils>=0.18.1",
    "sphinx<=7.1.2",
    "six",
    "testresources",
    "recommonmark",
    "sphinx-press-theme",
    "sphinx-tabs",
    "breathe"
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build-verbosity = "1"

test-requires = ["numpy"]
test-command = [
    "python {project}/tests/python/OpenColorIOTestSuite.py",
    "ociocheck"
]

[tool.cibuildwheel.linux]
before-build = "share/ci/scripts/linux/dnf/install_docs_env.sh"

[tool.cibuildwheel.macos]
# cibuildwheel in some cases set this to 10.9 by default, OCIO needs >= 10.15
# macOS ARM wheels needs 11.0, cibuildwheel will automatically bump where appropriate
environment = { MACOSX_DEPLOYMENT_TARGET="10.15" }
before-build = "share/ci/scripts/macos/install_docs_env.sh"

[tool.cibuildwheel.windows]
# OCIO_PYTHON_LOAD_DLLS_FROM_PATH can cause segfaults in the current wheel workflow
# Disable for now as wheels are built with static dependencies.
environment = { PATH="$GITHUB_WORKSPACE/doxygen;$PATH", OCIO_PYTHON_LOAD_DLLS_FROM_PATH="0" }
before-build = 'bash -c "share/ci/scripts/windows/install_docs_env.sh $GITHUB_WORKSPACE/doxygen"'
