[metadata]
author = OpenColorIO Developers
author_email = ocio-dev@lists.aswf.io
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: C++
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: C++
description = OpenColorIO (OCIO) is a complete color management solution geared towards motion picture production with an emphasis on visual effects and computer animation.
license = Copyright Contributors to the OpenColorIO Project.
license_files = LICENSE
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
name = opencolorio
python_requires = '>=3.9'
url = https://opencolorio.org/

[options]
zip_safe = False
